// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeSeparator renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "color": "#7D675E",
          "marginRight": 4,
        },
        false,
      ]
    }
  >
    text
  </PeachText>
  <HorizontalLine
    style={
      [
        {
          "flexGrow": 1,
          "marginLeft": 4,
        },
        false,
      ]
    }
  />
</View>
`;

exports[`TradeSeparator renders correctly with disputeActive 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "color": "#7D675E",
          "marginRight": 4,
        },
        {
          "color": "#DF321F",
        },
      ]
    }
  >
    text
  </PeachText>
  <HorizontalLine
    style={
      [
        {
          "flexGrow": 1,
          "marginLeft": 4,
        },
        {
          "backgroundColor": "#FFD1CA",
        },
      ]
    }
  />
</View>
`;

exports[`TradeSeparator renders correctly with iconColor 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Icon
    color="iconColor"
    id="xCircle"
    style={
      {
        "height": 16,
        "marginRight": 4,
        "width": 16,
      }
    }
  />
  <PeachText
    style={
      [
        {
          "color": "#7D675E",
          "marginRight": 4,
        },
        false,
      ]
    }
  >
    text
  </PeachText>
  <HorizontalLine
    style={
      [
        {
          "flexGrow": 1,
          "marginLeft": 4,
        },
        false,
      ]
    }
  />
</View>
`;

exports[`TradeSeparator renders correctly with iconId 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Icon
    color="#DF321F"
    id="xCircle"
    style={
      {
        "height": 16,
        "marginRight": 4,
        "width": 16,
      }
    }
  />
  <PeachText
    style={
      [
        {
          "color": "#7D675E",
          "marginRight": 4,
        },
        false,
      ]
    }
  >
    text
  </PeachText>
  <HorizontalLine
    style={
      [
        {
          "flexGrow": 1,
          "marginLeft": 4,
        },
        false,
      ]
    }
  />
</View>
`;

exports[`TradeSeparator renders correctly with iconId, iconColor and disputeActive 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Icon
    color="iconColor"
    id="xCircle"
    style={
      {
        "height": 16,
        "marginRight": 4,
        "width": 16,
      }
    }
  />
  <PeachText
    style={
      [
        {
          "color": "#7D675E",
          "marginRight": 4,
        },
        {
          "color": "#DF321F",
        },
      ]
    }
  >
    text
  </PeachText>
  <HorizontalLine
    style={
      [
        {
          "flexGrow": 1,
          "marginLeft": 4,
        },
        {
          "backgroundColor": "#FFD1CA",
        },
      ]
    }
  />
</View>
`;
